[package]
name = "kaon-rpc-json"
version = "0.19.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>", 
    "The Rust Kaon developers"
]
license = "CC0-1.0"
homepage = "https://github.com/akropolisio/rust-kaon-rpc/"
repository = "https://github.com/akropolisio/rust-kaon-rpc/"
description = "JSON-enabled type structs for kaon-rpc crate."
keywords = [ "crypto", "bitcoin", "kaon-core", "kaon", "rpc" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "kaon_rpc_json"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["kaon/rand-std"]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

kaon = { version = "0.32.0", features = ["serde"] }
